# nix-local-cache

./: .gitignore  Cargo.toml  README.md  config.toml  devenv.nix  flake.nix
.sqlx/: query-0394688fe5340938d7645695eb143c0b3d0b6c62cd3fcd2960a9a6dfd9cc97c6.json  query-57e8fcdaebe205d6ea66541995b1b711a3b09c75a24f311b136eef3ecf4b95a4.json  query-f35a8335313626234c849b6f095120576dbd0ad18ba2d7f146ce17ba8c0c9a16.json  query-f6034b49c80b4ce7e8d6918faca79f1568ed7951f3442323e8aae7ea50a3cb2a.json
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 20251207180000_add_results_to_jobs.sql  20251208100000_add_current_host_to_jobs.sql  20260301110000_add_timeout_seconds_to_jobs.sql  20260619120000_add_target_type_to_jobs.sql
crates/server/src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  nix.rs  service.rs
frontend/: config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: config.js
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/ui/: badge.tsx  button.tsx  terminal.tsx
frontend/src/hooks/: use-batched-logs.test.tsx  use-batched-logs.tsx
frontend/src/lib/: config.ts  types.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/jobs/: $id.tsx
migrations/: 20251207120000_create_jobs_table.sql
modules/: frontend.nix  server.nix
src/: api.rs  config.rs  lib.rs  logging.rs  main.rs  nix.rs  service.rs  types.rs
