[package]
name = "nix-local-cache-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json"], optional = true }
ts-rs = { version = "10.0", features = ["uuid-impl", "chrono-impl"] }

[features]
db = ["dep:sqlx"]
