[package]
name = "nix-local-cache-server"
version = "0.1.0"
edition = "2021"

[dependencies]
nix-local-cache-common = { path = "../common", features = ["db"] }
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
regex = "1.10"
wait-timeout = "0.2"
walkdir = "2"
futures = "0.3"
dashmap = "5.5"
sysinfo = "0.30"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.0"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3.23.0"
